--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,5 @@ resource.h
 bundle/installer-macos.generated.pkgproj
 bundle/LICENSE.txt
 bundle/macOS/Plugin-Info.plist
-*.pkg
+build/
 release/
-debug/
