--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -403,6 +403,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ github.workspace }}/${{ env.PRODUCT_NAME }}-macos/obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag }}-macos-universal.pkg
+          asset_path: ${{ github.workspace }}/${{ env.PRODUCT_NAME }}-macos-universal/obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag }}-macos-universal.pkg
           asset_name: obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag }}-macos-universal.pkg
           asset_content_type: application/vnd.apple.installer+xml
