--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ resource.h
 bundle/installer-macos.generated.pkgproj
 bundle/LICENSE.txt
 bundle/macOS/Plugin-Info.plist
+installer/LICENSE
 build/
 release/
