--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,14 +77,15 @@ jobs:
     strategy:
       matrix:
         arch: [64, 32]
-    env:
-      #CMAKE_GENERATOR: "Visual Studio 16 2019"
-      #CMAKE_SYSTEM_VERSION: "10.0.18363.657"
-      CI: "true"
-      WindowsDepsVersion: ${{ env.DEPS_VERSION_WIN }}
-      WindowsQtVersion: ${{ env.QT_VERSION_WIN }}
-      ObsVersion: "${{ needs.get_obs_info.outputs.latest_tag_name }}"
-      NSISVersion: "${{ env.NSIS_VERSION_WIN }}"
+    default:
+      env:
+        #CMAKE_GENERATOR: "Visual Studio 16 2019"
+        #CMAKE_SYSTEM_VERSION: "10.0.18363.657"
+        CI: "true"
+        WindowsDepsVersion: ${{ env.DEPS_VERSION_WIN }}
+        WindowsQtVersion: ${{ env.QT_VERSION_WIN }}
+        ObsVersion: "${{ needs.get_obs_info.outputs.latest_tag_name }}"
+        NSISVersion: "${{ env.NSIS_VERSION_WIN }}"
     steps:
       - name: 'Add msbuild to PATH'
         uses: microsoft/setup-msbuild@v1.0.2
