--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
   clang_check:
     name: '02 - Code format check'
     runs-on: [ubuntu-latest]
-    needs: [get_obs_info, get_plugin_info]
+    needs: [get_plugin_info]
     steps:
       - name: 'Checkout plugin ${{ needs.get_plugin_info.outputs.git_tag_name }}'
         uses: actions/checkout@v2.3.3
@@ -286,7 +286,7 @@ jobs:
           name: '${{ env.PRODUCT_NAME }}-macos-${{ matrix.arch }}'
           path: '${{ github.workspace }}/plugin/build/*-macos-${{ matrix.arch }}.*'
             
-  make-release:
+  upload-release:
     name: '05 - Upload release files'
     runs-on: [ubuntu-latest]
     needs: [get_plugin_info, windows_package, linux_build, macos_build]
