--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,13 @@ on:
     #release:
     #  types: [published]
   push:
-    tags:        
-      - v[1-9][0-9]*.[0-9]+.[0-9]+(-[a-z]+[0-9]*)*
+    tags:
+      - v[1-9].[0-9]+.[0-9]+
+      - v[1-9][0-9]+.[0-9]+.[0-9]+
+      - v[1-9].[0-9]+.[0-9]+-[a-z]+[1-9]
+      - v[1-9].[0-9]+.[0-9]+-[a-z]+[1-9][0-9]+
+      - v[1-9][0-9]+.[0-9]+.[0-9]+-[a-z]+[1-9]
+      - v[1-9][0-9]+.[0-9]+.[0-9]+-[a-z]+[1-9][0-9]+
 
 env:
   PRODUCT_NAME: 'obs-rtspserver'
@@ -300,7 +305,7 @@ jobs:
         id: prerelease_test
         with:
           search_string: ${{ needs.get_plugin_info.outputs.git_tag_name }}
-          regex_pattern: "^v[1-9][0-9]*.[0-9]+.[0-9]+(-[a-z]+[0-9]*)+$"
+          regex_pattern: "^v[1-9][0-9]*.[0-9]+.[0-9]+(-[a-z]+[1-9][0-9]*)?$"
 
       - name: 'Create release ${{ needs.get_plugin_info.outputs.git_tag_name }}'
         uses: ncipollo/release-action@v1
