--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -298,7 +298,7 @@ jobs:
     runs-on: [ubuntu-latest]
     needs: [get_plugin_info]
     outputs:
-      changelog: "${{ steps.create_changelog_text.outputs.changes }}\n**Full Changelog**: https://github.com/iamscottxu/obs-rtspserver/compare/${{ steps.get_last_release.outputs.tag_name }}...${{ needs.get_plugin_info.outputs.git_tag_name }}"
+      changelog: "${{ steps.create_changelog_text.outputs.changes }}\n\n**Full Changelog**: https://github.com/iamscottxu/obs-rtspserver/compare/${{ steps.get_last_release.outputs.tag_name }}...${{ needs.get_plugin_info.outputs.git_tag_name }}"
 
     steps:
       - name: 'Get last release info'
