--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -305,7 +305,7 @@ jobs:
         uses: actions/checkout@v2.3.3
         with:
           ref: '${{ needs.get_plugin_info.outputs.git_tag_name }}'
-          submodules: 'recursive'
+          fetch-depth: 0
 
       - name: 'Get last release info'
         id: get_last_release
